--- a/service.yaml
+++ b/service.yaml
@@ -1,3 +1,12 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
+  name: my-service
+spec:
+  selector:
+    app: nginx
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  type: LoadBalancer
