--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: my-service
+  name: webapp-service
 spec:
   selector:
-    app: nginx
+    app: webapp
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 6000
+    targetPort: 5000
   type: LoadBalancer
