--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: webapp
           imagePullPolicy: Never
-          image: test
+          image: webapp
           ports:
           - containerPort: 5000
           volumeMounts:
