--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: app-service
+  name: webapp-service
 spec:
   selector:
-    app: app
+    app: webapp
   ports:
   - protocol: TCP
     port: 6000
